change spin order, use html5 dtd, fixed the pixel shifting bug (related to focusing on textarea too quickly). numerous other css fixes/improvements and some refactoring

--- a/bar.css
+++ b/bar.css
@@ -49,13 +49,13 @@ a {
 	-webkit-transform: translateZ(15px);
 }
 .face.top {
-	-webkit-transform: rotateX(-270deg) translateZ(15px);
+	-webkit-transform: rotateX(90deg) translateZ(15px);
 }
 .face.bottom {
-	-webkit-transform: rotateX(-90deg) translateZ(15px);
+	-webkit-transform: rotateX(270deg) translateZ(15px);
 }
 .face.back {
-	-webkit-transform: rotateX(-180deg) translateZ(15px);
+	-webkit-transform: rotateX(180deg) translateZ(15px);
 }
 
 
@@ -146,7 +146,6 @@ img.avatar-retweet {
 .reply,.dm-reply {
 	display:inline-block;
 	height:11px;
-	margin-bottom:3px;
 	width:11px;
 	background:url(icons/reply-retweet-delete.png) no-repeat 0px 0px;
 }
@@ -181,6 +180,11 @@ img.avatar-retweet {
 	float:right;
 	width:90px;
 	text-align:right;
+	border-collapse:collapse;
+	padding:0;
+}
+#controls td {
+	padding:0;
 }
 
 .overlay {
@@ -206,14 +210,18 @@ img.avatar-retweet {
 }
 
 .tweet-text {
-	display:inline-block;
-	padding:0;
-	width:450px;
+	padding:0px 0px 0px 2px;
+	width:445px;
 	height:27px;
 	font-size:9px;
-	background:transparent;
+	background:#c0c0c0;
 	resize:none;
 }
+
+.tweet-text:focus { 
+	outline: none;
+}
+
 
 #send-tweet,#shorten {
 	height:14px;
@@ -231,7 +239,7 @@ img.avatar-retweet {
 .chars-left {
 	position:absolute;
 	left:423px;
-	top:15px;
+	top:16px;
 	color:#404040;
 	text-align:right;
 	width:24px;
